FIX close button z-index

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -311,6 +311,8 @@ input[data-error]::after {
   opacity: 1;
   cursor: pointer;
   transform: scale(0.7);
+  display: block;
+  z-index: 100;
 }
 .close:before,
 .close:after {
